test/errors/type/collections/set/__le3.yasl
echo collections.set().__le(1, true)
